--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "notistack": "^0.9.7",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-intl": "^5.20.10",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-uuid": "^1.0.2"
